syntax = "proto3";

package sfc_team;

import "Models/Team/Player/team_player.proto";

option csharp_namespace = "SFC.Team.Contracts.Messages.Team.Player.Find";

message GetTeamPlayersResponse
{
    repeated TeamPlayer items = 1;
}